# rustbot2

./: Cargo.toml
src/: args.rs  eventhandler.rs  main.rs  token.rs
src/commands/: mod.rs
src/commands/general/: echo.rs  mod.rs  ping.rs  random.rs  spam.rs
src/commands/voice/: mod.rs  play.rs  presence.rs  queue.rs
