[package]
name = "rustbot2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

async-trait = "0.1"
rand = "0.8"

tracing-opentelemetry = "0.17"
opentelemetry-jaeger = {version = "0.16", features = ["rt-tokio"]}
opentelemetry = {version ="0.17", features = ["rt-tokio"]}

[dependencies.tracing-subscriber]
version = "0.3"

[dependencies.tracing]
version = "0.1"

[dependencies.songbird]
version = "0.3"
features = ["builtin-queue"]

[dependencies.tokio]
version = "1.20"
features = ["rt-multi-thread", "signal"]

[dependencies.serenity]
version = "0.11"

[dependencies.clap]
version = "3"
features = ["derive"]